                    ------------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

05/11/14 I. Hrivnacova (excommon-V10-00-05)
- Restoring back GNUmakefile (lost with previous update)

05/11/14 I. Hrivnacova (excommon-V10-00-04)
- Moved analysis subdirectory in extended/analysis/AnaEx01/hbook,
  as it is not used anywhere else

05/11/14 I. Hrivnacova (excommon-V10-00-03)
- Removed sub-directories with user classes and scripts (now obsolete)

04/11/14 I. Hrivnacova (excommon-V10-00-02)
- Added GNUmakefile in top directory

04/11/14 I. Hrivnacova (excommon-V10-00-01)
- Modifications to facilitate use of common directory via svn:externals:
  merging user classes in the top directoy (include and src),
  added testCommon.cc for all classes altogether and 
  added building common library

28/05/14 I. Hrivnacova (excommon-V10-00-00)
- Removed fPrintModulo from ExG4EventAction01
  and fSetPrintModuloCmd from ExG4EventAction01Messenger,
  now obsolete.
- Fixed long lines, separators in userActions classes   

28/02/13 I. Hrivnacova (excommon-V09-06-00)
- When building materials with NistManager
  do not set fromIsotopes argument (which was set to false), 
  as since 9.6 all materials have to be built from isotopes.
  Thanks to V. Ivantchenko for pointing at this.

26/09/2012 I. Hrivnacova (excommon-V09-05-02)
- Added/updated CMakeLists.txt files:
  adding copying macros, install target, comment lines
  and HBOOK external package in analysis
- Added explicit includes of G4SystemOfUnits.hh and G4PhysicalConstants.hh
- Replaced tabulators with space characters
- Updated script for generating CMakeLists.txt files

19/07/2012 I. Hrivnacova (excommon-V09-05-01)